Migrate to OpenMRS Core 3.0.0-SNAPSHOT (#702)
* Migrate to OpenMRS Core 3.0.0-SNAPSHOT

Key changes:
- Upgrade Java from 8 to 21
- javax.servlet -> jakarta.servlet namespace migration
- org.apache.commons.lang -> org.apache.commons.lang3
- Jackson 1.x (org.codehaus.jackson) -> Jackson 2.x (com.fasterxml.jackson)
- Hibernate Criteria API -> JPA Criteria API in RestHelperServiceImpl
- Spring 6: CommonsMultipartResolver -> StandardServletMultipartResolver
- Spring 6: PathPatternParser compatibility (remove setPathMatcher after init)
- Hibernate 6: Cache API updates, Query API changes, strict lazy loading
- Remove legacyui-omod dependency (AdminSection extends Extension directly)
- Fix Core 3.0 API removals (Field.getAnswers, setStatus(int,String), etc.)
- Update version patterns in resources/search handlers for Core 3.0
- Fix test datasets for Core 3.0 schema changes (NOT NULL constraints)
- Add -parameters compiler flag for Spring 6 parameter name resolution

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Remove Java 8, 11, 17 from build matrix

Update GitHub Actions and Bamboo CI to only build with Java 21,
matching the minimum Java version required by Core 3.0.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Add Java 25 to the build matrix

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Fix admin page extension point links not displaying

Restore AdminSection to extend AdministrationSectionExt from legacyui
so that the <openmrs:extensionPoint> tag properly recognizes and renders
the admin section links. Add legacyui-omod 2.1.0-SNAPSHOT as an
optional provided dependency.

Also fix person display test expectations to remove 'Mr.' prefix
which is no longer included in Core 3.0.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Use apacheTomcatVersion property instead of inline version

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Clean up FieldA